# fastapi-study-2

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  docker-compose.yaml  pyproject.toml  ruff.toml
games-catalog/: .env  alembic.ini  app_lifespan.py  create_app.py  main.py
games-catalog/alembic/: env.py
games-catalog/alembic/versions/: 2025_05_11_1054-5eda19102128_create_games_table.py  2025_05_13_1329-3786cf832589_create_games_table.py  2025_05_13_1359-8feebf681e76_create_games_table.py  2025_05_14_1459-089eb18e53ab_create_tables.py  2025_05_14_2257-1cf5ebc13769_create_tables.py  2025_05_15_1542-bdbbcd96507b_change_value_type_in_ratings_table.py  2025_05_15_1706-2f461e7ecdff_change_relationship_with_tables.py  2025_05_16_1803-13572ae02f95_create_genres_table.py  2025_05_16_1929-00954709134f_create_game_genre_association_table.py  2025_05_16_1952-7e0769251641_change_table_agrs.py
games-catalog/api/: build_jsonapi_app.py  generic_view.py  router.py
games-catalog/api/schemas/: __init__.py  game.py  game_rating.py  genre.py
games-catalog/api/views/: game_view.py
games-catalog/core/: config.py
games-catalog/core/models/: __init__.py  game.py  game_genre.py  game_rating.py  genre.py
games-catalog/core/models/mixins/: int_id_pk.py
