[project]
name = "fastapi-study-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.15.2",
    "fastapi-jsonapi>=3.0.0",
    "fastapi[standard]>=0.115.12",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "sqlalchemy[asyncio]>=2.0.40",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.9",
]
